# SimDriver

./: .gitignore  AgentModel_8h_source.html  CMakeLists.txt  DistanceTimeInterval_8h_source.html  Dockerfile  Filter_8h_source.html  Interface_8h_source.html  LICENSE  README.md  StopHorizon_8h_source.html  VelocityHorizon_8h_source.html  annotated.html  classAgentModel-members.html  classAgentModel.html  classAgentModel__coll__graph.map  classAgentModel__coll__graph.md5  classAgentModel__inherit__graph.map  classAgentModel__inherit__graph.md5  classagent__model_1_1DistanceTimeInterval-members.html  classagent__model_1_1DistanceTimeInterval.html  classagent__model_1_1Filter-members.html  classagent__model_1_1Filter.html  classagent__model_1_1Interface-members.html  classagent__model_1_1Interface.html  classagent__model_1_1Interface__coll__graph.map  classagent__model_1_1Interface__coll__graph.md5  classagent__model_1_1Interface__inherit__graph.map  classagent__model_1_1Interface__inherit__graph.md5  classagent__model_1_1StopHorizon-members.html  classagent__model_1_1StopHorizon.html  classagent__model_1_1VelocityHorizon-members.html  classagent__model_1_1VelocityHorizon.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_0x7e.html  functions_a.html  functions_b.html  functions_c.html  (+193 more)
.github/ISSUE_TEMPLATE/: simple-improvement-proposal.md
.github/workflows/: build.yml  c-cpp.yml  ci.yml  doxy.yml
cmake/: ModuleCoverage.cmake  ModuleDoxygen.cmake  ModuleGtest.cmake  ModuleInjection.cmake  ModuleSimCore.cmake  ModuleVehicleModel.cmake
include/Injection/: Injection.h
include/SimDriver/: Behavior.h  Controller.h  Interface.h  model_collection.h
include/SimDriver/utils/: Filter.h  Math.h  VelocityHorizon.h
include/injection/: Interface.h
include/simdriver/: Behavior.h  Injection.h  _Controller.h
include/simdriver/utils/: Controller.h  DistanceTimeInterval.h  PedalController.h  StopHorizon.h  VehicleControllerAdapter.h
lib/Injection/: CMakeLists.txt
lib/Injection/include/injection/: Injection.h  InjectionInterface.h
lib/Injection/src/: InjectionInterface.cpp
lib/Logging/: FileLogger.h  PlotLogger.h  UDPLogger.h
lib/VehicleModel/: CMakeLists.txt  README.md  VehicleModel.cpp  VehicleModel.h
lib/VehicleModel/doc/: VehicleModel.ipynb
lib/VehicleModel/doc/.ipynb_checkpoints/: VehicleModel-checkpoint.ipynb
lib/VehicleModel/src/: CMakeLists.txt  PrimaryController.cpp  PrimaryController.h  VehicleModel.cpp  VehicleModel.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+25 more)
src/: AgentController.cpp  AgentController.h  AgentModel.cpp  AgentModel.h  AgentModelInjection.cpp  AgentModelInjection.h  CMakeLists.txt  DistanceTimeInterval.h  Filter.h  Interface.h  README.md  StopHorizon.h  VelocityHorizon.h  model_collection.cpp  model_collection.h
src/Injection/: CMakeLists.txt  Interface.cpp
src/SimDriver/: CMakeLists.txt  Controller.cpp  README.md
src/simdriver/: Behavior.cpp  CMakeLists.txt  Injection.cpp  _Controller.cpp  model_collection.cpp
test/: CMakeLists.txt
test/VehicleModel/: VehicleModelInSimTest.cpp  VehicleModelTest.cpp
test/VehicleModelTest/: CMakeLists.txt  CommunicationTest.cpp  ControllerTest.cpp  SimulationLoop.h  VehicleModelTest.cpp
test/capabilities/: AMT_Acceleration.cpp  AMT_Following.cpp  AMT_HorizonControl.cpp  AMT_LateralControl.cpp  AMT_Longitudinal.cpp  AMT_Pedal.cpp  AMT_PredictionAcceleration.cpp  AMT_PredictionAccelerationAll.cpp  AMT_SpeedControl.cpp  AMT_Steering.cpp  AMT_StopSigns.cpp  AgentModelAdapter.h  CMakeLists.txt  VehicleControllerAdapter.h
test/injection/: CMakeLists.txt  InjectionTest.cpp
test/models/: CMakeLists.txt  FollowingTargets.cpp  LaneChangeDecision.cpp  SalvucciAndGray.cpp  VelocityControl.cpp
test/utils/: CMakeLists.txt  DistanceTimeIntervalTest.cpp  FilterTest.cpp  HelperFunctionsTest.cpp  StopHorizonTest.cpp  VelocityHorizonTest.cpp
uncomment.github/workflows/: build.yml
